fix comment wrap

--- a/src/index.scss
+++ b/src/index.scss
@@ -311,6 +311,7 @@ a.button {
         .markdown-body {
             margin-top: 10px;
             font-size: 14px;
+	    white-space: pre-wrap;
         }
         .highlight {
             font-size: 15px;
